--- a/src/components/SongsList/SongsList.css
+++ b/src/components/SongsList/SongsList.css
@@ -32,7 +32,7 @@ section {
 .scrollable-inner {
     width: 100%;
     overflow-y: scroll;
-    min-height: 90%;
+    max-height: 90%;
 
     font-size: 3.2rem;
 }
