--- a/src/components/FontSizeBar/FontSizeBar.css
+++ b/src/components/FontSizeBar/FontSizeBar.css
@@ -1,17 +1,21 @@
 .font-size-bar {
   position: absolute;
   transform: rotate(-90deg);
-  left: -6rem;
+  left: -5.5rem;
   top: 30rem;
 
   -webkit-appearance: none;
   appearance: none;
   background: rgba(255, 255, 255, 0.2);
   cursor: pointer;
-  height: 1px;
+  height: 3px;
 
   overflow: visible;
   z-index: 10000;
+
+  border-radius: 3px;
+
+  width: 17rem;
 }
 
 .font-size-bar:focus {
@@ -22,9 +26,9 @@
   -webkit-appearance: none; 
   appearance: none;
   background-color: #c0c0c0;
-  border-radius: 0.5rem;
-  height: 1rem;
-  width: 1rem;
+  border-radius: 0.6rem;
+  height: 1.2rem;
+  width: 1.2rem;
 }
 
 .font-size-bar:focus::-webkit-slider-thumb {
